# C-_Research

Constexpr/: CMakeLists.txt
Constexpr/src/: const.cpp  test.cpp
Lambdas/: CMakeLists.txt
Lambdas/src/: main.cpp
Move_Semantics/: CMakeLists.txt
Move_Semantics/src/: move_advanced.cpp
Smart_Ptrs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Smart_Ptrs/src/: smart_ptr.cpp
